# fastplm

./: .Rbuildignore  .gitignore  CMakeLists.txt  ChangeLog  DESCRIPTION  LICENSE  Makefile  NAMESPACE  README.md  fastplm.tar
CXXCode/: CMakeLists.txt  copy-to-R.sh
CXXCode/include/: Common.h  FixedEffect.h  GPanelMAP.h  GradientDescent.h  MatrixReader.h
CXXCode/includeR/: Common.h
CXXCode/src/: FixedEffect.cpp  GPSolver.cpp  GPanelMAP.cpp  GradientDescent.cpp
CXXCode/tests/: BasicGradientDescent.cpp  CMakeLists.txt  GPSolver.cpp  GPanelMAP.ans  GPanelMAP.in  basic-data.txt
Math/: GradientDescent.tex
R/: .Rhistory  RcppExports.R  Wrapper.R  base.R  catch-routine-registration.R  fastplm.R  fastplm_boot.R  fastplm_core.R  fe.model.R  fe_sampling.R  fixed.effects.R  getdof.r  indicators.R  iv_test.r  ivfastplm_boot.r  ivfastplm_core.r  messages.R  overidentification.r  test.R
RPackage/: NAMESPACE
RPackage/R/: RcppExports.R
RPackage/scripts/: test.R  test_cpp.R
RPackage/src/: FixedEffect.cpp  MatrixReader.cpp  PlainModel.h  Wrapper.cpp
cpp/: fastplm.cpp
data/: datalist  fastplm.RData
debug/: Debug.cpp
man/: create.complex.effect.rd  create.fixed.effects.rd  create.indicators.rd  create.subindicators.rd  fastplm-internal.Rd  fastplm-package.Rd  fastplm.rd  predict.fastplm.rd  predict.fe.model.rd  predictFE.rd  simdata1.Rd  simdata2.Rd  simdata3.Rd  solve.fe.model.rd  solveFE.rd  summary.fastplm.rd
math/: GPanel.tex
mathematics/: fixed-effects-interacting-across-two-categories.tex
scripts/: test.R  test_cpp.R
src/: Common.h  ComponentAnalysis.cpp  ComponentAnalysis.h  CrashQueue.cpp  CrashQueue.h  CrushQueue.cpp  CrushQueue.h  Demean.cpp  Demean.h  FastFESolver.cpp  FastFESolver.h  FixedEffect.cpp  FixedEffect.h  FixedEffectModel.cpp  FixedEffectModel.h  FixedEffects.cpp  FixedEffects.h  GPSolver.cpp  GPSolver.h  GradientDescent.cpp  GradientDescent.h  Indicator.cpp  Indicator.h  LinearModel.cpp  LinearModel.h  MAP.cpp  MAP.h  Makevars  Makevars.win  MatrixReader.cpp  PlainModel.cpp  PlainModel.h  RcppExports.cpp  SlowFESolver.cpp  SlowFESolver.h  Wrapper.cpp  cluster.cpp  fastplm.cpp  iv.cpp
tests/: CMakeLists.txt  FEDataGenerator.r  GPDataGenerator.r  SpeedResult.txt  SpeedTest.r  testthat.R
tests/manual/: CMakeLists.txt
tests/manual/basic-cpp/: CMakeLists.txt  README.md  main.cpp  make-data.R
tests/manual/speed-test/: speed-test.R
tests/testthat/: complex-effects.R  make-small-data.R  plain-data.R  test-component-analysis.R  test-demean-complex-fixed-effects.R  test-demean-fixed-effects.R  test-demean-without-x.R  test-fe-model.R  test-fixed-effects-rownames.R  test-fixed-effects.R  test-indicators.R  test-parallel-demean-correct.R  test-predict-fixed-effects-with-unknown-indicators.R  test-predict-fixed-effects.R
